# ectorch

./: .gitignore  README.md  pyproject.toml
ectorch/: __init__.py  training.py
ectorch/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py
ectorch/tests/: test_callbacks.py  test_training.py
